infrastructure/node-main/ns-media/base/transmission/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: transmission
  ports:
    - name: http
      port: 9091
      targetPort: http
      protocol: TCP
