infrastructure/node-main/ns-media/base/transmission/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
spec:
  ingressClassName: traefik
  rules:
    - host: transmission.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  name: http
